[project]
name = "blck"
version = "0.1.0"
description = "An ephemeral pastebin/URL-shortener"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bjoern==3.2.2",
    "blinker==1.9.0",
    "click==8.1.7",
    "flask==3.1.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.4",
    "markupsafe==3.0.2",
    "python-magic==0.4.27",
    "werkzeug==3.1.3",
]
